--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,8 @@
 * {
     box-sizing: border-box;
+    font-family: "Indie Flower", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
 
 body {
@@ -19,19 +22,42 @@ form>input {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 70px;
 }
 
 .header {
     text-align: center;
     max-width: 80%;
-    padding: 8px;
+    padding: 2px;
     margin: auto;
     background-color: rgba(188, 160, 160, 0.8);
-    border-radius: 20px;
+    border-radius: 50px;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px;
 }
 
 .header-ul {
-    margin: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+.header-link {
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin: 0 10px;
+    text-decoration: none;
+}
+
+.header-link:hover {
+    color: rgb(235, 2, 200);
 }
 
 .header-ul>p {
@@ -40,8 +66,23 @@ form>input {
 
 .header-title {
     color:white;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: bold;
+}
+
+.logout {
+    border: none;
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 1rem;
+    font-weight: bold;
+    color:white;
+    background-color: rgb(235, 2, 200);
+}
+
+.logout:hover {
+    color:black;
+    background-color: white;
 }
 
 .title {
@@ -67,4 +108,8 @@ form>input {
     bottom: 0;
     width: 100%;
     background-color: rgba(188, 160, 160, 1);
+}
+
+.footer-text {
+    font-weight: bold;
 }
